2009-12-20  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Rubber-stamped by Xan Lopez.

        Make sure the text encoding machinery is initialized from the main
        frame, before opening the icon database.

        * webkit/webkitprivate.cpp:
        (webkit_init):

2009-12-19  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        Fixed the problem when pasting in the same window with the
        middle-button, now we store a reference to the range instead of
        requesting it every time, and we do not release it until the
        clipboard is requested.
        https://bugs.webkit.org/show_bug.cgi?id=28153

        * WebKit/gtk/WebCoreSupport/EditorClientGtk.cpp:
        * WebKit/gtk/WebCoreSupport/EditorClientGtk.h:

2009-12-19  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Protect download objects when reporting errors, to make sure the
        download stays alive between the status change notification, and
        the error signal emission.

        * webkit/webkitdownload.cpp:
        (webkit_download_error):

2009-12-18  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Fix gtk-doc of webkit_web_resource_new.

        * webkit/webkitwebresource.cpp:

2009-12-18  Adam Roben  <aroben@apple.com>

        GTK build fix

        * webkit/webkitprivate.cpp: Added #include.

2009-12-18  Kalle Vahlman  <kalle.vahlman@movial.com> and Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Add enable-page-cache property to WebSettings for disabling the Page Cache

        * webkit/webkitwebsettings.cpp:
        (_WebKitWebSettingsPrivate::):
        (_WebKitWebSettingsPrivate::webkit_web_settings_class_init):
        (_WebKitWebSettingsPrivate::webkit_web_settings_set_property):
        (_WebKitWebSettingsPrivate::webkit_web_settings_get_property):